- Guessindent no longer overrides istep if indendation is space.

- Fix low limit of lmargin

- Fix ^G in perl mode when you hit it on second brace in:
	{\'
	\'}

- Fix LUA highlighter (dirk_s)

- Fix crash from bad va_arg usage (dnelson)

- Fix crash from mktmp() not generating perm string (dnelson)

- Improved conf.jsf (dirk_s)

- Added local option (-nobackup) to suppress backup files (peje)

- Add Matlab syntax file (neer)

- Improve mail syntax highlighter (jqh)

- Fix crash when calling syntax file as subroutine (hal9042)

- Get "ctags" tag search to work again

- Fix crash when JOE tries to write to unwritable file

- Fix crash when entering blank macro ESC x <return>

- Improve Verilog highlighter

- Fix crash when typing ESC x !ls

- Add C++ keywords to highlighter (otterpop81)

- Added RPM spec file syntax spec.jsf

- Improve 'istring' (.jsf command) (hal9042)

- Update French .po file (jengelh)

- Fix infinite search/replace loop bug (yugk)

- New feature: insert status line format string using 'txt' (tykef)

- Update Russion .po file (yugk)

- Update Russian manpage (yugk)

- Update jicerc Russian rc file (yugk)

- Fix lock prompt message (yugk)

- Add Ukrainian .po file (yugk)

JOE 3.5

- Query windows now expand to multiple lines if necessary

- Single key queries are now internationalized (set local versions in the
  .po file)

- Spell check language can be set in the editor

- New syntax files: m4, joerc

- New debug window for highlight file syntax errors.

- Macros can be typed at the ESC X prompt (before it used to accept only
  commands).

- Built-in joerc file allows joe to run even if /etc/joe directory is
  missing.

- Support for 'long long' allows editing parts of files larger than 4GB. 
  For example, you can say: joe /dev/hda,0x100000000,0x1000 to edit the 4KB
  block at offset 4GB of a hard drive.

- Option which allows you set how many undo records to keep.

- You can give a path to the tags file in the TAGS environment variable.
